Enhance password recovery and validation features
Updated AuthService.cs to add methods for password updates, email checks, and user counting. Modified UserService.cs to include CurrentRecoveryEmail property. Enhanced NewPasswordPageView.xaml, PasswordRecoveryPageView.xaml, and PasswordVerifyCodePageView.xaml with new validation controls and error message bindings. Updated NewPasswordPageViewModel.cs, PasswordRecoveryPageViewModel.cs, and PasswordVerifyCodePageViewModel.cs with new properties and commands for handling password recovery processes. Adjusted VerifyCodePageViewModel.cs to extend timer duration for verification codes.

--- a/View/Auth/NewPasswordPageView.xaml
+++ b/View/Auth/NewPasswordPageView.xaml
@@ -3,9 +3,11 @@
     x:Class="MAUIRecipeApp.View.Auth.NewPasswordPageView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:input="clr-namespace:InputKit.Shared.Controls;assembly=InputKit.Maui"
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:validations="clr-namespace:InputKit.Shared.Validations;assembly=InputKit.Maui"
     xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.Auth"
     Title=""
     x:DataType="viewmodel:NewPasswordPageViewModel"
@@ -29,6 +31,12 @@
                 Text="Please enter your new password"
                 TextColor="{StaticResource Gray300}" />
 
+            <Label
+                FontSize="14"
+                HorizontalOptions="Center"
+                Text="{Binding ErrorMSG}"
+                TextColor="Red" />
+
             <material:TextField
                 Title="New password"
                 Margin="0,16,0,0"
@@ -36,7 +44,10 @@
                 CornerRadius="16"
                 FontSize="16"
                 IsPassword="True"
+                Text="{Binding Password}"
                 TextColor="{StaticResource PrimaryDarkText}">
+                <validations:RequiredValidation />
+                <validations:RegexValidation Message="Password must be at least 6 characters long and include at least two of the following: a lowercase letter, an uppercase letter, or a number. " Pattern="{x:Static input:AdvancedEntry.REGEX_PASSWORD}" />
                 <material:TextField.Icon>
                     <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Lock}" />
                 </material:TextField.Icon>
@@ -51,7 +62,10 @@
                 CornerRadius="16"
                 FontSize="16"
                 IsPassword="True"
+                Text="{Binding ConfirmPassword}"
                 TextColor="{StaticResource PrimaryDarkText}">
+                <validations:RequiredValidation />
+                <validations:RegexValidation Message="Password must be at least 6 characters long and include at least two of the following: a lowercase letter, an uppercase letter, or a number. " Pattern="{x:Static input:AdvancedEntry.REGEX_PASSWORD}" />
                 <material:TextField.Icon>
                     <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Lock}" />
                 </material:TextField.Icon>
@@ -59,37 +73,6 @@
                     <material:TextFieldPasswordShowHideAttachment />
                 </material:TextField.Attachments>
             </material:TextField>
-
-
-            <Label
-                FontSize="16"
-                Text="Your Password must contain:"
-                TextColor="{StaticResource PrimaryDarkText}" />
-            <HorizontalStackLayout Margin="8,0,0,0" Spacing="8">
-                <Image>
-                    <Image.Source>
-                        <FontImageSource
-                            FontFamily="MaterialSharp"
-                            Glyph="{x:Static m:MaterialSharp.Check_circle}"
-                            Size="22"
-                            Color="{StaticResource Primary}" />
-                    </Image.Source>
-                </Image>
-                <Label Text="Atleast 6 characters" />
-            </HorizontalStackLayout>
-
-            <HorizontalStackLayout Margin="8,0,0,0" Spacing="8">
-                <Image>
-                    <Image.Source>
-                        <FontImageSource
-                            FontFamily="MaterialSharp"
-                            Glyph="{x:Static m:MaterialSharp.Check_circle}"
-                            Size="22"
-                            Color="{StaticResource Primary}" />
-                    </Image.Source>
-                </Image>
-                <Label Text="Contains a number" />
-            </HorizontalStackLayout>
 
             <Button
                 Margin="0,16,0,0"
