--- a/View/Auth/PasswordRecoveryPageView.xaml
+++ b/View/Auth/PasswordRecoveryPageView.xaml
@@ -3,9 +3,11 @@
     x:Class="MAUIRecipeApp.View.Auth.PasswordRecoveryPageView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:input="clr-namespace:InputKit.Shared.Controls;assembly=InputKit.Maui"
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:validations="clr-namespace:InputKit.Shared.Validations;assembly=InputKit.Maui"
     xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.Auth"
     Title=""
     x:DataType="viewmodel:PasswordRecoveryPageViewModel"
@@ -26,12 +28,21 @@
                 HorizontalOptions="Center"
                 Text="Enter your email to recover your password"
                 TextColor="{StaticResource Gray300}" />
+            <Label
+                FontSize="14"
+                HorizontalOptions="Center"
+                HorizontalTextAlignment="Center"
+                Text="{Binding ErrorMSG}"
+                TextColor="Red" />
             <material:TextField
                 Title="Email"
                 Margin="0,16,0,0"
                 AllowClear="True"
                 FontSize="20"
+                Text="{Binding Email}"
                 TextColor="{StaticResource PrimaryDarkText}">
+                <validations:RequiredValidation />
+                <validations:RegexValidation Message="Please type a valid e-mail address." Pattern="{x:Static input:AdvancedEntry.REGEX_EMAIL}" />
                 <material:TextField.Icon>
                     <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Mail}" />
                 </material:TextField.Icon>
@@ -44,6 +55,15 @@
                 FontSize="20"
                 Text="Recover"
                 TextColor="{StaticResource WhiteText}" />
+
+            <Button
+                Margin="0,16,0,0"
+                BackgroundColor="Transparent"
+                BorderColor="{StaticResource Primary}"
+                Command="{Binding LoginCommand}"
+                FontSize="18"
+                Text="Back to login"
+                TextColor="{StaticResource Primary}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
